# docs/swagger.json
@@ -406,6 +406,12 @@
                         "description": "Page number (default: 1, min: 1)",
                         "name": "page",
                         "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Page number",
+                        "name": "category_id",
+                        "in": "query"
                     }
                 ],
                 "responses": {}
@@ -506,14 +512,14 @@
                 "responses": {}
             }
         },
-        "/api/market/orders/{cart_order_id}": {
+        "/api/market/orders/{order_id}": {
             "get": {
                 "security": [
                     {
                         "BearerAuth": []
                     }
                 ],
-                "description": "Retrieves detailed order information for a specific cart_order_id. Requires market admin JWT authentication.",
+                "description": "Retrieves detailed order information for a specific order_id. Requires market admin JWT authentication.",
                 "produces": [
                     "application/json"
                 ],
@@ -524,16 +530,14 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Cart Order ID",
-                        "name": "cart_order_id",
+                        "description": "Order ID",
+                        "name": "order_id",
                         "in": "path",
                         "required": true
                     }
                 ],
                 "responses": {}
-            }
-        },
-        "/api/market/orders/{order_id}": {
+            },
             "put": {
                 "security": [
                     {
@@ -567,6 +571,31 @@
                         "schema": {
                             "$ref": "#/definitions/models.UpdateOrderStatusRequest"
                         }
+                    }
+                ],
+                "responses": {}
+            },
+            "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Deletes a order by its ID. Requires JWT authentication.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Orders"
+                ],
+                "summary": "Delete a order by ID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Order ID",
+                        "name": "order_id",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {}
@@ -1684,6 +1713,36 @@
                 "responses": {}
             }
         },
+        "/api/user-orders/{order_id}": {
+            "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Updates the is_active of an order to false",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Orders"
+                ],
+                "summary": "Update order is_active",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Order ID",
+                        "name": "order_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            }
+        },
         "/banners": {
             "get": {
                 "description": "Retrieves all banners with their ID, description, and thumbnail URL. Public endpoint, no authentication required.",
@@ -1869,6 +1928,12 @@
                         "type": "string",
                         "description": "Category ID",
                         "name": "category_id",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Market ID",
+                        "name": "market_id",
                         "in": "query"
                     },
                     {
